--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -7,3 +7,19 @@ services:
     ports:
       - "8080:8080"
     restart: always
+
+  nginx:
+    image: nginx:latest
+    # 端口映射
+    ports:
+        - "80:80"
+    environment:
+        - LANG=en_US.UTF-8
+        - LANGUAGE=en_US:en
+        - LC_ALL=en_US.UTF-8 
+    # 数据卷
+    volumes:
+        # 映射主机./conf.d目录到容器/etc/nginx/conf.d目录
+        - "$PWD/nginx.conf:/etc/nginx/conf.d/default.conf"
+        - "/root/show/:/show"
+    restart: always
