--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -6,4 +6,6 @@ services:
       dockerfile: docker/server.Dockerfile
     ports:
       - "8080:8080"
+    volumes:
+      - ../img/:/go/src/Frontend/img
     restart: always
